--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "description": "More info available on: http://pear.php.net/package/Services_JSON",
     "license": "BSD",
-    "name": "pear/services_json",
+    "name": "siu-toba/services_json",
     "support": {
         "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Services_JSON",
         "source": "https://github.com/pear/Services_JSON"
